@@ -47,6 +47,7 @@ extern void libgeom_suite_setup(void);
 extern void lwstroke_suite_setup(void);
 extern void measures_suite_setup(void);
 extern void effectivearea_suite_setup(void);
+extern void chaikin_suite_setup(void);
 extern void minimum_bounding_circle_suite_setup(void);
 extern void misc_suite_setup(void);
 extern void node_suite_setup(void);
@@ -97,6 +98,7 @@ PG_SuiteSetup setupfuncs[] =
 	lwstroke_suite_setup,
 	measures_suite_setup,
 	effectivearea_suite_setup,
+	chaikin_suite_setup,
 	minimum_bounding_circle_suite_setup,
 	misc_suite_setup,
 	node_suite_setup,
