@@ -1,0 +1,6 @@
+1|LINESTRING(0 0,6 6,6 10,0 16)
+ERROR:  Not more than 5 iterations please
+ERROR:  Number of iterations must be between 1 and 5
+4|LINESTRING(0 0,4.5 4.5,6 7,6 9,4.5 11.5,0 16)
+5|POINT(0 0)
+6|GEOMETRYCOLLECTION(POINT(1 1),LINESTRING(1 1,1 2.125,1 2.75,1 3.25,1 3.875,1 5),POLYGON((5 5,5 7.8125,5.3125 9.0625,5.9375 9.6875,6.875 10,8.125 10,9.0625 9.6875,9.6875 9.0625,10 8.125,10 6.875,9.6875 5.9375,9.0625 5.3125,7.8125 5,5 5),(6 6,6 6.5625,6.0625 6.8125,6.1875 6.9375,6.375 7,6.625 7,6.8125 6.9375,6.9375 6.8125,7 6.625,7 6.375,6.9375 6.1875,6.8125 6.0625,6.5625 6,6 6)))
